# beograd_struja

./: .gitignore  Dockerfile  README.md  alembic.ini  bot_state_main.py  celerybeat-schedule  docker-clean-up.sh  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  temp-delete-scheduled-addresses.py  temp-parse.py
alembic/: env.py
alembic/versions/: 12a16ad077aa_initial_migration.py  244791ccb0fc_initial_migration.py  36f5633b3c29_initial_migration.py  4a7ad25a305c_initial_migration.py  88e5e6b8a7cc_modify_fields_in_user_model_first_name_.py  a20e78e3b190_added_bot_language_column_to_the_user.py  b1d4c17e226a_added_settlement_field_to_.py  c46cec2d9d2e_initial_migration.py  ce5863dc3f2b_initial_migration.py  fa5924855314_initial_migration.py  fb2d3746d2e5_initial_migration.py
telegram_app/: bot_state_main.py  celerybeat-schedule  fastapi_main.py  notify_test.py  scraper_beauty.py  tasks.py  telegram_main.py  tg_user_address.db
telegram_app/address/: address_validator.py  geopify_validator.py
telegram_app/api/: crud.py
telegram_app/bot/: lang.py  logging_config.py  utils.py
telegram_app/celery_app/: celery_app.py
telegram_app/docs/: readme.txt  redis.txt  todo.txt  Описание работы телеграм бота.txt
telegram_app/kb_delete/: compare_address_range.py  copy_car.py  crud.py  database.py  main.py  models.py  notify_user.py  refactoring.py  schemas.py  telegram_main.py  useraddress.py
telegram_app/parser/: utils.py
telegram_app/sql/: database.py  models.py  queries.py  schemas.py
tests/: test_server.py
(+13 files in other folders)
